# qtbug-qml-same-names

./: CMakeLists.txt  LICENSE  main.cpp
